--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  speech_to_text: ^7.0.0
+  http: ^1.3.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +23,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - .env
