--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^1.3.0
   flutter_dotenv: ^5.2.1
   google_generative_ai: ^0.4.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
