--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   google_generative_ai: ^0.4.6
   intl: ^0.20.2
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.1
-  google_sign_in: ^6.3.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
