--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_generative_ai: ^0.4.6
   intl: ^0.20.2
   shared_preferences: ^2.5.2
+  flutter_tts: ^4.2.2
 
 dev_dependencies:
   flutter_test:
