--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,19 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>UIBackgroundModes</key>
-    <array>
-        <string>audio</string>
-    </array>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>We need access to speech recognition for voice commands.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>We need access to your microphone to record voice input.</string>
-	<key>NSPrivacyAccessedAPICategories</key>
-	<array>
-		<string>speech-recognition</string>
-		<string>microphone</string>
-	</array>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -37,6 +26,23 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>QR code recognition requires camera access.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone to record voice input.</string>
+	<key>NSPrivacyAccessedAPICategories</key>
+	<array>
+		<string>speech-recognition</string>
+		<string>microphone</string>
+	</array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>We need access to speech recognition for voice commands.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -54,9 +60,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
