--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.5.2
   flutter_tts: ^4.2.2
+  mobile_scanner: ^7.0.0
 
 dev_dependencies:
   flutter_test:
