--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   shared_preferences: ^2.5.2
   flutter_tts: ^4.2.2
   mobile_scanner: ^7.0.0
+  qr_flutter: ^4.1.0
+  share_plus: ^7.2.1
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
