--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   qr_flutter: ^4.1.0
   share_plus: ^7.2.1
   path_provider: ^2.1.2
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -32,3 +35,4 @@ flutter:
   assets:
     - assets/
     - .env
+    - assets/google_icon.png
