--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+android/build/
+ios/Flutter/
+ios/build/
 
 # Symbolication related
 app.*.symbols
