--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application
-        android:label="saydo"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.nompangs.product">
+
+<application
+        android:label="product"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
