Integrate deep linking support

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Saydo</string>
+	<string>Nompangs</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>saydo</string>
+	<string>nompangs</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -77,6 +77,14 @@
 		<string>$(GOOGLE_REVERSED_CLIENT_ID)</string>
 		</array>
 	</dict>
+	<dict>
+        <key>CFBundleURLName</key>
+        <string>com.yourcompany.saydo</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+            <string>nompangs</string>
+        </array>
+    </dict>
 	</array>
 </dict>
 </plist>
