--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "saydo",
-    "short_name": "saydo",
+    "name": "nompangs",
+    "short_name": "nompangs",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
