--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   google_generative_ai: ^0.4.6
   intl: ^0.20.2
   shared_preferences: ^2.5.2
-  flutter_tts: ^4.2.2
+  audioplayers: ^6.4.0
   mobile_scanner: ^7.0.0
   qr_flutter: ^4.1.0
   share_plus: ^7.2.1
