--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_auth: ^5.5.4
   google_sign_in: ^6.3.0
   app_links: ^6.4.0
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
