--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^2.1.2
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
   google_sign_in: ^6.3.0
   app_links: ^6.4.0
   permission_handler: ^12.0.0+1
