--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   json_annotation: ^4.8.1
   go_router: ^12.1.3
   lottie: ^2.7.0
+  gal: ^2.3.0
 
 dev_dependencies:
   flutter_test:
