--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -33,7 +33,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/> 
 	<key>NSCameraUsageDescription</key>
-	<string>QR code recognition requires camera access.</string>
+	<string>QR 코드 스캔을 위해 카메라 접근 권한이 필요합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>We need access to your microphone to record voice input.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
