feat: 온보딩 화면 UI/UX 개선 및 디자인 업데이트 - personality/purpose/photo/generation screen 재설계, 에셋 관리 개선, iOS 설정 업데이트

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/ui_assets/
+    - assets/ui_assets/placeHolder_1@2x.png
     - .env
     - assets/google_icon.png
   fonts:
