--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   go_router: ^12.1.3
   lottie: ^2.7.0
   gal: ^2.3.0
+  just_audio: ^0.10.4
+  audio_session: ^0.2.2
 
 dev_dependencies:
   flutter_test:
