--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ flutter:
   assets:
     - assets/
     - assets/ui_assets/
+    - assets/ui_assets/cardShape_1.png
+    - assets/ui_assets/cardShape_2.png
+    - assets/ui_assets/cardShape_3.png
     - assets/ui_assets/placeHolder_1@2x.png
     - .env
     - assets/google_icon.png
