--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   gal: ^2.3.0
   just_audio: ^0.10.4
   audio_session: ^0.2.2
+  openai_realtime_dart: ^0.0.4
 
 dev_dependencies:
   flutter_test:
