--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   go_router: ^12.1.3
   lottie: ^2.7.0
   gal: ^2.3.0
+  carousel_slider: ^4.2.1
   # just_audio: ^0.10.4
   # audio_session: ^0.2.2
   openai_realtime_dart: ^0.0.4
