--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   mobile_scanner: ^7.0.0
   qr_flutter: ^4.1.0
   share_plus: ^7.2.1
-  path_provider: ^2.1.2
+  path_provider: ^2.1.5
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
@@ -39,6 +39,7 @@ dependencies:
   # just_audio: ^0.10.4
   # audio_session: ^0.2.2
   openai_realtime_dart: ^0.0.4
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
