--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # audio_session: ^0.2.2
   openai_realtime_dart: ^0.0.4
   sqflite: ^2.4.2
+  dart_openai: ^5.1.0
 
 dev_dependencies:
   flutter_test:
