--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,11 +50,11 @@
 		<string>_dartobservatory._tcp</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>QR 코드 스캔을 위해 카메라 접근 권한이 필요합니다.</string>
+	<string>Used to scan QR codes</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Flutter 개발을 위해 로컬 네트워크 접근이 필요합니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>We need access to your microphone to record voice input.</string>
+	<string>Used for real-time voice chat with characters</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>QR 코드 이미지를 사진 라이브러리에 저장하기 위해 접근 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
