--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   openai_realtime_dart: ^0.0.4
   sqflite: ^2.4.2
   dart_openai: ^5.1.0
+  flutter_sound: ^9.28.0
 
 dev_dependencies:
   flutter_test:
