--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   lottie: ^2.7.0
   gal: ^2.3.0
   carousel_slider: ^4.2.1
+  dropdown_button2: ^2.3.9
   # just_audio: ^0.10.4
   # audio_session: ^0.2.2
   openai_realtime_dart: ^0.0.4
